prevent navtab overflow in admin and center headings in single column sections

--- a/app/assets/sass/ail.scss
+++ b/app/assets/sass/ail.scss
@@ -110,6 +110,11 @@ section {
     float: right;
     padding-right: 0px;
   }
+  .twelve.columns {
+    h1,h2,h3,h4,h5 {
+      text-align: center;
+    }
+  }
   div.columns {
     margin: 1.5em 0;
   }
